[tool.poetry]
name = "visualize-mesh"
version = "0.1.0"
description = ""
authors = ["Otto Jerome <o.jerome@ieee.org>"]
maintainers = [
    "Otto Jerome <o.jerome@ieee.org>",
]
package-mode = false
readme = "README.MD"
[tool.poetry.dependencies]
python = "^3.12"
pyvista = "^0.44.2"
tqdm = "^4.67.1"
pygeodesic = "^0.1.11"
potpourri3d = "^1.2.1"
pydantic = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
visualize = 'visualize.run_example'